force-app/main/default/objects/Product2/fields/Estimation_of_time_days__c.field-meta.xml
<CustomField>
    <fullName>Estimation_of_time_days__c</fullName>
    <inlineHelpText>1 day - 8 hours</inlineHelpText>
    <label>Estimation of time (days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>