force-app/main/default/objects/Product2/fields/Is_service__c.field-meta.xml
<CustomField>
    <fullName>Is_service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is service?</label>
    <type>Checkbox</type>
</CustomField>