force-app/main/default/objects/Product2/fields/Parent_material__c.field-meta.xml
<CustomField>
    <fullName>Parent_material__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent material</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Parent materials</relationshipLabel>
    <relationshipName>models_of_material</relationshipName>
    <type>Lookup</type>
</CustomField>