force-app/main/default/objects/Product2/fields/Related_service_product__c.field-meta.xml
<CustomField>
    <fullName>Related_service_product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related service product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Related products of service</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>