force-app/main/default/objects/Product2/fields/Required_materials__c.field-meta.xml
<CustomField>
    <fullName>Required_materials__c</fullName>
    <label>Required materials</label>
    <type>TextArea</type>
</CustomField>