force-app/main/default/objects/Product2/fields/Stock__c.field-meta.xml
<CustomField>
    <fullName>Stock__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Stock</label>
    <type>Checkbox</type>
</CustomField>