force-app/main/default/objects/Product2/listViews/Services.listView-meta.xml
<ListView>
    <fullName>Services</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.PRODUCT_CLASS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_service__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Services</label>
</ListView>